Removing hardcode dates.

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -202,7 +202,8 @@
                                                 <td align="center" valign="top">
                                                     <a href="https://www.spacenow.com/" target="_blank"
                                                         style="text-decoration: none; color: #172439;">
-                                                        <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/logo.png" alt="spacenow" width="190" border="0"
+                                                        <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/logo.png"
+                                                            alt="spacenow" width="190" border="0"
                                                             style="display: block; outline: none; font-family:Arial, sans-serif; font-weight: bold; font-size: 22px; color: #172439;" />
                                                     </a>
                                                 </td>
@@ -210,18 +211,6 @@
                                         </table>
                                     </td>
                                     <td class="mobile-hide" width="20">&nbsp;</td>
-                                    <td class="tdblock" align="center" valign="top">
-                                        <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0"
-                                            style="border-collapse: collapse;">
-                                            <tr>
-                                                <td class="center" align="right" valign="middle"
-                                                    style="padding-top: 10px;  font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:16px; font-weight: normal;mso-line-height-rule:exactly;line-height:25px;color:#142D3F;">
-                                                    <a style="text-decoration: none; color: #142D3F;cursor: text;">Tuesday,
-                                                        July 17, 2018</a>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </td>
                                 </tr>
                             </table>
                         </td>
@@ -251,8 +240,9 @@
                     </tr>
                     <tr>
                         <td align="center" valign="top" bgcolor="#172439">
-                            <img class="imgwidth" src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_01.png" alt="" width="600" border="0"
-                                style="display: block; outline: none;max-width: 600px;" />
+                            <img class="imgwidth"
+                                src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_01.png"
+                                alt="" width="600" border="0" style="display: block; outline: none;max-width: 600px;" />
                         </td>
                     </tr>
                 </table>
@@ -336,8 +326,9 @@
                                                             </td>
                                                             <td class="tdblock" width="20"></td>
                                                             <td class="tdblock" align="center" valign="bottom">
-                                                                <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_03.png" alt="" width="218"
-                                                                    border="0" style="display: block; outline: none;" />
+                                                                <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_03.png"
+                                                                    alt="" width="218" border="0"
+                                                                    style="display: block; outline: none;" />
                                                             </td>
                                                             <td class="tdblock" width="10"></td>
                                                             <td class="tdblock" align="right" valign="top">
@@ -401,7 +392,8 @@
                                     <td align="center" valign="middle">
                                         <a href="https://www.facebook.com/spacenowaustralia/"
                                             style="text-decoration: none;color:#6ADC91;">
-                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_facebook.png" alt="facebook" width="12" border="0"
+                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_facebook.png"
+                                                alt="facebook" width="12" border="0"
                                                 style="display: block; outline: none;" />
                                         </a>
                                     </td>
@@ -409,7 +401,8 @@
                                     <td align="center" valign="middle">
                                         <a href="https://www.linkedin.com/company/17945312/"
                                             style="text-decoration: none;color:#6ADC91;">
-                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_linkedin.png" alt="linkedin" width="22" border="0"
+                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_linkedin.png"
+                                                alt="linkedin" width="22" border="0"
                                                 style="display: block; outline: none;" />
                                         </a>
                                     </td>
@@ -417,7 +410,8 @@
                                     <td align="center" valign="middle">
                                         <a href="https://www.youtube.com/channel/UCIq-FZwLqPS81bASw2EksTA"
                                             style="text-decoration: none;color:#6ADC91;">
-                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_youtube.png" alt="youtube" width="54" border="0"
+                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_youtube.png"
+                                                alt="youtube" width="54" border="0"
                                                 style="display: block; outline: none;" />
                                         </a>
                                     </td>
@@ -425,7 +419,8 @@
                                     <td align="center" valign="middle">
                                         <a href="https://twitter.com/spacenow_aus"
                                             style="text-decoration: none;color:#6ADC91;">
-                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_twitter.png" alt="twitter" width="19" border="0"
+                                            <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_twitter.png"
+                                                alt="twitter" width="19" border="0"
                                                 style="display: block; outline: none;" />
                                         </a>
                                     </td>
