--- a/templates/report-listing.html
+++ b/templates/report-listing.html
@@ -40,7 +40,7 @@
         margin: 0 auto !important;
       }
 
-      div[style*="margin: 16px 0px"] {
+      div[style*='margin: 16px 0px'] {
         margin: 0 !important;
         font-size: 100% !important;
         width: 100% !important;
@@ -181,10 +181,7 @@
     </style>
   </head>
 
-  <body
-    bgcolor="#ffffff"
-    style="background:#ffffff; width: 100%; margin: 0 auto!important;padding: 0;"
-  >
+  <body bgcolor="#ffffff" style="background:#ffffff; width: 100%; margin: 0 auto!important;padding: 0;">
     <!-- wrapper -->
     <table
       width="100%"
@@ -213,11 +210,7 @@
               </td>
             </tr>
             <tr>
-              <td
-                align="center"
-                valign="top"
-                style="padding-left: 20px; padding-right: 20px;"
-              >
+              <td align="center" valign="top" style="padding-left: 20px; padding-right: 20px;">
                 <table
                   width="100%"
                   align="center"
@@ -272,10 +265,7 @@
                             valign="middle"
                             style="padding-top: 10px;  font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:16px; font-weight: normal;mso-line-height-rule:exactly;line-height:25px;color:#142D3F;"
                           >
-                            <a
-                              style="text-decoration: none; color: #142D3F;cursor: text;"
-                              >{{currentDate}}</a
-                            >
+                            <a style="text-decoration: none; color: #142D3F;cursor: text;">{{ currentDate }}</a>
                           </td>
                         </tr>
                       </table>
@@ -285,11 +275,7 @@
               </td>
             </tr>
             <tr>
-              <td
-                class="vspace15"
-                height="27"
-                style="font-size: 0; line-height:27px;"
-              >
+              <td class="vspace15" height="27" style="font-size: 0; line-height:27px;">
                 &nbsp;
               </td>
             </tr>
@@ -309,11 +295,7 @@
             class="container"
           >
             <tr>
-              <td
-                class="vspace30"
-                height="55"
-                style="font-size: 0; line-height:55px;"
-              >
+              <td class="vspace30" height="55" style="font-size: 0; line-height:55px;">
                 &nbsp;
               </td>
             </tr>
@@ -327,11 +309,7 @@
               </td>
             </tr>
             <tr>
-              <td
-                class="vspace30"
-                height="44"
-                style="font-size: 0; line-height:44px;"
-              >
+              <td class="vspace30" height="44" style="font-size: 0; line-height:44px;">
                 &nbsp;
               </td>
             </tr>
@@ -373,11 +351,7 @@
                   style="border-collapse: collapse;"
                 >
                   <tr>
-                    <td
-                      class="vspace30"
-                      height="45"
-                      style="font-size: 0; line-height:45px;"
-                    >
+                    <td class="vspace30" height="45" style="font-size: 0; line-height:45px;">
                       &nbsp;
                     </td>
                   </tr>
@@ -401,8 +375,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
                     >
-                      The guest&nbsp; {{ guest }} with the id&nbsp; {{ guestId }} reported
-                      the following space:
+                      The guest&nbsp; {{ guest }} with the id&nbsp; {{ guestId }} reported the following space:
                     </td>
                   </tr>
                   <tr>
@@ -499,13 +472,7 @@
                   </tr>
                   <tr>
                     <td align="center" valign="top">
-                      <table
-                        width="100%"
-                        align="center"
-                        border="0"
-                        cellspacing="0"
-                        cellpadding="0"
-                      >
+                      <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td
                             bgcolor="#6ADC91"
@@ -513,7 +480,7 @@
                             align="center"
                           >
                             <a
-                              href="https://spacenow.com/space/{{spaceId}}"
+                              href="https://app.spacenow.com/space/{{ spaceId }}"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
                               >See the space</a
@@ -596,10 +563,7 @@
                     </td>
                     <td width="10">&nbsp;</td>
                     <td align="center" valign="middle">
-                      <a
-                        href="https://www.linkedin.com/company/17945312/"
-                        style="text-decoration: none;color:#6ADC91;"
-                      >
+                      <a href="https://www.linkedin.com/company/17945312/" style="text-decoration: none;color:#6ADC91;">
                         <img
                           src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_linkedin.png"
                           alt="linkedin"
@@ -626,10 +590,7 @@
                     </td>
                     <td width="10">&nbsp;</td>
                     <td align="center" valign="middle">
-                      <a
-                        href="https://twitter.com/spacenow_aus"
-                        style="text-decoration: none;color:#6ADC91;"
-                      >
+                      <a href="https://twitter.com/spacenow_aus" style="text-decoration: none;color:#6ADC91;">
                         <img
                           src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_twitter.png"
                           alt="twitter"
@@ -655,12 +616,9 @@
                 valign="top"
                 style="padding: 0px 18px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:11px; mso-line-height-rule:exactly;line-height:14px;color:#939393;"
               >
-                You received this email because you are subscribed to
-                notiﬁcations from Spacenow.
+                You received this email because you are subscribed to notiﬁcations from Spacenow.
                 <br /><br />Update your
-                <a href="#" style="text-decoration: none;color:#939393;"
-                  >email preferences</a
-                >
+                <a href="#" style="text-decoration: none;color:#939393;">email preferences</a>
                 to choose the type of emails you receive.
               </td>
             </tr>
