Updating review emails.

--- a/templates/booking-request-review-host.html
+++ b/templates/booking-request-review-host.html
@@ -229,7 +229,7 @@
         </tr>
         <!-- end header -->
         <tr>
-            <td align="center" valign="top" bgcolor="#6adc91">
+            <td align="center" valign="top" bgcolor="#142d3f">
                 <table width="600" align="center" cellpadding="0" cellspacing="0" border="0"
                     style="border-collapse: collapse; width: 600px;" class="container">
                     <tr>
@@ -254,7 +254,7 @@
                     <tr>
                         <td align="center" valign="top" bgcolor="#ebebeb">
                             <img class="imgwidth"
-                                src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_10.png"
+                                src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_11.png"
                                 alt="" width="600" border="0" style="display: block; outline: none;max-width: 600px;" />
                         </td>
                     </tr>
@@ -276,7 +276,7 @@
                                 <tr>
                                     <td align="left" valign="top"
                                         style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:32px;color:#172439;">
-                                        You just checked out.<br />How was&nbsp;{{hostName}}&nbsp;as a host?
+                                        {{name}}&nbsp;just checked out.<br />How were they as a guest?
                                     </td>
                                 </tr>
                                 <tr>
@@ -284,7 +284,7 @@
                                 </tr>
                                 <tr>
                                     <td align="left" valign="top"
-                                        style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;">
+                                        style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;">
                                         Your feedback makes the community stronger.
                                     </td>
                                 </tr>
