--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -251,7 +251,7 @@
                               style="text-decoration: none; color: #172439;"
                             >
                               <img
-                                src="images/logo.png"
+                                src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/logo.png"
                                 alt="spacenow"
                                 width="190"
                                 border="0"
@@ -326,7 +326,7 @@
               <td align="center" valign="top" bgcolor="#172439">
                 <img
                   class="imgwidth80"
-                  src="images/img_01.png"
+                  src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_01.png"
                   alt=""
                   width="600"
                   border="0"
@@ -369,7 +369,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:29px;color:#172439;"
                     >
-                      Hi {user},<br />this is the start of something big.
+                      Hi {guest},<br />this is the start of something big.
                     </td>
                   </tr>
                   <tr>
@@ -447,7 +447,7 @@
                                 <td class="tdblock" width="20"></td>
                                 <td class="tdblock" align="center" valign="bottom">
                                   <img
-                                    src="images/img_03.png"
+                                    src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_03.png"
                                     alt=""
                                     width="218"
                                     border="0"
@@ -547,7 +547,7 @@
                         style="text-decoration: none;color:#6ADC91;"
                       >
                         <img
-                          src="images/icon_facebook.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_facebook.png"
                           alt="facebook"
                           width="12"
                           border="0"
@@ -559,7 +559,7 @@
                     <td align="center" valign="middle">
                       <a href="https://www.linkedin.com/company/17945312/" style="text-decoration: none;color:#6ADC91;">
                         <img
-                          src="images/icon_linkedin.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_linkedin.png"
                           alt="linkedin"
                           width="22"
                           border="0"
@@ -574,7 +574,7 @@
                         style="text-decoration: none;color:#6ADC91;"
                       >
                         <img
-                          src="images/icon_youtube.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_youtube.png"
                           alt="youtube"
                           width="54"
                           border="0"
@@ -586,7 +586,7 @@
                     <td align="center" valign="middle">
                       <a href="https://twitter.com/spacenow_aus" style="text-decoration: none;color:#6ADC91;">
                         <img
-                          src="images/icon_twitter.png"
+                          src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/icon_twitter.png"
                           alt="twitter"
                           width="19"
                           border="0"
