--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -369,7 +369,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:29px;color:#172439;"
                     >
-                      Hi {guest},<br />this is the start of something big.
+                      Hi {{ guest }},<br />this is the start of something big.
                     </td>
                   </tr>
                   <tr>
@@ -467,7 +467,7 @@
                                         align="center"
                                       >
                                         <a
-                                          href="#"
+                                          href="https://app.spacenow.com/listing/intro"
                                           target="_blank"
                                           style="color: #1C3942; text-decoration: none; display: inline-block;"
                                           >Start earning now</a
