--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -279,7 +279,7 @@
                             valign="middle"
                             style="padding-top: 10px;  font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:16px; font-weight: normal;mso-line-height-rule:exactly;line-height:25px;color:#142D3F;"
                           >
-                            <a style="text-decoration: none; color: #142D3F;cursor: text;">Tuesday, July 17, 2018</a>
+                            <a style="text-decoration: none; color: #142D3F;cursor: text;">{{ currentDate }}</a>
                           </td>
                         </tr>
                       </table>
@@ -369,7 +369,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:29px;color:#172439;"
                     >
-                      Hi {{ guest }},<br />this is the start of something big.
+                      Hi&nbsp; {{ guest }},<br />this is the start of something big.
                     </td>
                   </tr>
                   <tr>
@@ -398,94 +398,96 @@
                   </tr>
                   <tr class="mobile-hide">
                     <td align="center" valign="top">
-                      <table
-                        width="100%"
-                        align="center"
-                        cellpadding="0"
-                        cellspacing="0"
-                        border="0"
-                        bgcolor="#142D3F"
-                        style="border-collapse: collapse; background: #142D3F; border-radius: 15px;"
-                      >
-                        <tr>
-                          <td colspan="3" class="vspace10" height="25" style="font-size: 0; line-height:25px;">
-                            &nbsp;
-                          </td>
-                        </tr>
-                        <tr>
-                          <td width="25"></td>
-                          <td align="center" valign="top">
-                            <table
-                              width="100%"
-                              align="center"
-                              cellpadding="0"
-                              cellspacing="0"
-                              border="0"
-                              style="border-collapse: collapse;"
-                            >
-                              <tr>
-                                <td class="tdblock" align="center" valign="top">
-                                  <table
-                                    align="center"
-                                    cellpadding="0"
-                                    cellspacing="0"
-                                    border="0"
-                                    style="border-collapse: collapse;"
-                                  >
-                                    <tr>
-                                      <td
-                                        class="tdblock"
-                                        align="center"
-                                        valign="top"
-                                        style="padding: 20px 0px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:20px; mso-line-height-rule:exactly;line-height:26px;color:#ffffff;"
-                                      >
-                                        Have a spare&nbsp;space?
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
-                                <td class="tdblock" width="20"></td>
-                                <td class="tdblock" align="center" valign="bottom">
-                                  <img
-                                    src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_03.png"
-                                    alt=""
-                                    width="218"
-                                    border="0"
-                                    style="display: block; outline: none;"
-                                  />
-                                </td>
-                                <td class="tdblock" width="10"></td>
-                                <td class="tdblock" align="right" valign="top">
-                                  <table align="center" border="0" cellspacing="0" cellpadding="0">
-                                    <tr>
-                                      <td height="25" style="font-size: 0; line-height:25px;">&nbsp;</td>
-                                    </tr>
-                                    <tr>
-                                      <td
-                                        bgcolor="#6ADC91"
-                                        style="padding: 12px 19px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 12px; line-height: 18px; white-space: nowrap;"
-                                        align="center"
-                                      >
-                                        <a
-                                          href="https://app.spacenow.com/listing/intro"
-                                          target="_blank"
-                                          style="color: #1C3942; text-decoration: none; display: inline-block;"
-                                          >Start earning now</a
+                      <a href="https://app.spacenow.com/listing/intro">
+                        <table
+                          width="100%"
+                          align="center"
+                          cellpadding="0"
+                          cellspacing="0"
+                          border="0"
+                          bgcolor="#142D3F"
+                          style="border-collapse: collapse; background: #142D3F; border-radius: 15px;"
+                        >
+                          <tr>
+                            <td colspan="3" class="vspace10" height="25" style="font-size: 0; line-height:25px;">
+                              &nbsp;
+                            </td>
+                          </tr>
+                          <tr>
+                            <td width="25"></td>
+                            <td align="center" valign="top">
+                              <table
+                                width="100%"
+                                align="center"
+                                cellpadding="0"
+                                cellspacing="0"
+                                border="0"
+                                style="border-collapse: collapse;"
+                              >
+                                <tr>
+                                  <td class="tdblock" align="center" valign="top">
+                                    <table
+                                      align="center"
+                                      cellpadding="0"
+                                      cellspacing="0"
+                                      border="0"
+                                      style="border-collapse: collapse;"
+                                    >
+                                      <tr>
+                                        <td
+                                          class="tdblock"
+                                          align="center"
+                                          valign="top"
+                                          style="padding: 20px 0px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:20px; mso-line-height-rule:exactly;line-height:26px;color:#ffffff;"
                                         >
-                                      </td>
-                                    </tr>
-                                    <tr>
-                                      <td height="25" style="font-size: 0; line-height:25px;">&nbsp;</td>
-                                    </tr>
-                                  </table>
-                                </td>
-                                <td class="mobile-hide" width="5"></td>
-                              </tr>
-                            </table>
-                          </td>
-                          <td width="25"></td>
-                        </tr>
-                      </table>
+                                          Have a spare&nbsp;space?
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </td>
+                                  <td class="tdblock" width="20"></td>
+                                  <td class="tdblock" align="center" valign="bottom">
+                                    <img
+                                      src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_03.png"
+                                      alt=""
+                                      width="218"
+                                      border="0"
+                                      style="display: block; outline: none;"
+                                    />
+                                  </td>
+                                  <td class="tdblock" width="10"></td>
+                                  <td class="tdblock" align="right" valign="top">
+                                    <table align="center" border="0" cellspacing="0" cellpadding="0">
+                                      <tr>
+                                        <td height="25" style="font-size: 0; line-height:25px;">&nbsp;</td>
+                                      </tr>
+                                      <tr>
+                                        <td
+                                          bgcolor="#6ADC91"
+                                          style="padding: 12px 19px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 12px; line-height: 18px; white-space: nowrap;"
+                                          align="center"
+                                        >
+                                          <a
+                                            href="https://app.spacenow.com/listing/intro"
+                                            target="_blank"
+                                            style="color: #1C3942; text-decoration: none; display: inline-block;"
+                                            >Start earning now</a
+                                          >
+                                        </td>
+                                      </tr>
+                                      <tr>
+                                        <td height="25" style="font-size: 0; line-height:25px;">&nbsp;</td>
+                                      </tr>
+                                    </table>
+                                  </td>
+                                  <td class="mobile-hide" width="5"></td>
+                                </tr>
+                              </table>
+                            </td>
+                            <td width="25"></td>
+                          </tr>
+                        </table>
+                      </a>
                     </td>
                   </tr>
                   <tr>
