welcome and confirm emails

--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -398,7 +398,7 @@
                   </tr>
                   <tr class="mobile-hide">
                     <td align="center" valign="top">
-                      <a href="https://app.spacenow.com/listing/intro">
+                      <a href="https://app.spacenow.com/listing/intro" style="text-decoration: none">
                         <table
                           width="100%"
                           align="center"
