test booking request host

--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -304,7 +304,7 @@
                             valign="middle"
                             style="padding-top: 10px;  font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:16px; font-weight: normal;mso-line-height-rule:exactly;line-height:25px;color:#142D3F;"
                           >
-                            <a style="text-decoration: none; color: #142D3F;cursor: text;">{{ currentDate }}</a>
+                            <a style="text-decoration: none; color: #142D3F;cursor: text;"> currentDate </a>
                           </td>
                         </tr>
                       </table>
@@ -394,7 +394,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:24px; font-weight: 600;mso-line-height-rule:exactly;line-height:29px;color:#172439;"
                     >
-                      Hi {{ user }}, great news.
+                      Hi  user , great news.
                     </td>
                   </tr>
                   <tr>
@@ -406,8 +406,8 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;"
                     >
-                      {{ guestName }} wants to book your space: {{ listTitle }} from {{ checkInDate }} to
-                      {{ checkOutDate }}. This booking will earn you a cool {{ total }}. Based on {{ basePrice }} per
+                       guestName  wants to book your space:  listTitle  from  checkInDate  to
+                       checkOutDate . This booking will earn you a cool  total . Based on  basePrice  per
                       {term]. <br /><br />
                       Your new guest:
                     </td>
@@ -446,7 +446,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:21px; mso-line-height-rule:exactly;line-height:25px;color:#172439;"
                                 >
-                                  {{ guestName }}
+                                   guestName 
                                 </td>
                               </tr>
                             </table>
@@ -499,8 +499,8 @@
                                         valign="middle"
                                         style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; font-weight: 600; mso-line-height-rule:exactly;line-height:24px;color:#172439;"
                                       >
-                                        {{ checkInMonth }}
-                                        <br />{{ checkInDay }}
+                                         checkInMonth 
+                                        <br /> checkInDay 
                                       </td>
                                     </tr>
                                   </table>
@@ -513,7 +513,7 @@
                                 >
                                   <a style="text-decoration: none; color: #172439;cursor: text;">check-in</a>
                                   <br />
-                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{ checkInTime }}</a>
+                                  <a style="text-decoration: none; color: #172439;cursor: text;"> checkInTime </a>
                                 </td>
                               </tr>
                             </table>
@@ -546,8 +546,8 @@
                                         valign="middle"
                                         style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; font-weight: 600; mso-line-height-rule:exactly;line-height:24px;color:#172439;"
                                       >
-                                        {{ checkOutMonth }}
-                                        <br />{{ checkOutDay }}
+                                         checkOutMonth 
+                                        <br /> checkOutDay 
                                       </td>
                                     </tr>
                                   </table>
@@ -560,7 +560,7 @@
                                 >
                                   <a style="text-decoration: none; color: #172439;cursor: text;">check-out</a>
                                   <br />
-                                  <a style="text-decoration: none; color: #172439;cursor: text;">{{ checkOutTime }}</a>
+                                  <a style="text-decoration: none; color: #172439;cursor: text;"> checkOutTime </a>
                                 </td>
                               </tr>
                             </table>
@@ -606,7 +606,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  {{ subtotal }}
+                                   subtotal 
                                 </td>
                               </tr>
                               <tr>
@@ -622,7 +622,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  {{ serviceFee }}
+                                   serviceFee 
                                 </td>
                               </tr>
                               <tr>
@@ -657,7 +657,7 @@
                                   valign="top"
                                   style="font-family: 'Montserrat', Helvetica, Arial, sans-serif;font-size:20px;font-weight: 500; mso-line-height-rule:exactly;line-height:18px;color:#172439;"
                                 >
-                                  {{ total }}
+                                   total 
                                 </td>
                               </tr>
                             </table>
@@ -697,7 +697,7 @@
                                           align="center"
                                         >
                                           <a
-                                            href="{{ acceptLink }}"
+                                            href="#"
                                             target="_blank"
                                             style="color: #ffffff; text-decoration: none; display: inline-block;"
                                             >Accept</a
@@ -716,7 +716,7 @@
                                           align="center"
                                         >
                                           <a
-                                            href="{{ declineLink }}"
+                                            href="#"
                                             target="_blank"
                                             style="color: #ffffff; text-decoration: none; display: inline-block;"
                                             >Decline</a
@@ -803,7 +803,7 @@
                                           style="border-radius: 4px; -webkit-border-radius: 4px;"
                                         >
                                           <img
-                                            src="{{ listImage }}"
+                                            src=" listImage "
                                             alt=""
                                             title=""
                                             width="243"
@@ -838,7 +838,7 @@
                                           valign="top"
                                           style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:18px; mso-line-height-rule:exactly;line-height:22px;color:#1F252A;"
                                         >
-                                          {{ listTitle }}
+                                           listTitle 
                                         </td>
                                       </tr>
                                       <tr>
@@ -847,7 +847,7 @@
                                           valign="top"
                                           style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
                                         >
-                                          {{ listAddress }}
+                                           listAddress 
                                         </td>
                                       </tr>
                                       <tr>
@@ -856,8 +856,8 @@
                                           valign="top"
                                           style="padding: 0 17px 10px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600; font-size:14px; mso-line-height-rule:exactly;line-height:18px;color:#1F252A;"
                                         >
-                                            <strong>{{ basePrice }}</strong>
-                                            <span style="font-size: 8px;">{{ period }}</span>
+                                            <strong> basePrice </strong>
+                                            <span style="font-size: 8px;"> period </span>
                                         </td>
                                         </tr>
                                             <tr>
@@ -875,7 +875,7 @@
                                                                                                         <img src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_08_icon1.png" alt="" title="" width="32" style="outline: none" border="0"  />
                                                                                                     </td>
                                                                                                     <td height="38" align="center" valign="middle" style="padding-top: 1px; color: #172439;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600;font-size: 12px; line-height: 14px;">
-                                                                                                        <a href="#" target="_blank" style="color: #172439; text-decoration: none;">&nbsp;{{category}}&nbsp;</a></td>
+                                                                                                        <a href="#" target="_blank" style="color: #172439; text-decoration: none;">&nbsp;category&nbsp;</a></td>
                                                                                                 </tr>
                                                                                             </table>
                                                                                         </td>
@@ -920,7 +920,7 @@
                                   align="center"
                                 >
                                   <a
-                                    href="{{ acceptLink }}"
+                                    href="#"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
                                     >Accept booking</a
@@ -939,7 +939,7 @@
                                   align="center"
                                 >
                                   <a
-                                    href="{{ declineLink }}"
+                                    href="#"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
                                     >Decline booking</a
