--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -408,7 +408,7 @@
                     >
                        guestName  wants to book your space:  listTitle  from  checkInDate  to
                        checkOutDate . This booking will earn you a cool  total . Based on  basePrice  per
-                      {term]. <br /><br />
+                      term. <br /><br />
                       Your new guest:
                     </td>
                   </tr>
