--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -422,7 +422,7 @@
                           <td align="left" valign="top">
                             <img
                               class="img95"
-                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/peron_icon.png"
+                              src="{{guestPhoto}}"
                               alt=""
                               width="110"
                               border="0"
