--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -426,7 +426,7 @@
                               alt=""
                               width="110"
                               border="0"
-                              style="display: block; outline: none;"
+                              style="display: block; outline: none;     border-radius: 50%;"
                             />
                           </td>
                           <td width="20" class="space15">&nbsp;</td>
